--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -22,3 +22,4 @@ textarea { width: 100%; height: 10rem; }
 .right { float: right; }
 .left { float: left; }
 .full-width { width: 100%; }
+a.auth-me { position: absolute; top: 1rem; left: 1rem; }
