--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,6 +6,7 @@ body { width: 70%; margin: auto; margin-top: 3rem; }
 ul { list-style-type: none; }
 form { width: 100%; }
 li input[type="text"] { width: 80%; }
+input { transition: all 1s; }
 input[type="checkbox"] { width: auto; }
 input[type="email"],input[type="password"] { width: 100%; }
 form input[type="submit"] { display: none; }
@@ -23,3 +24,4 @@ textarea { width: 100%; height: 10rem; }
 .left { float: left; }
 .full-width { width: 100%; }
 a.auth-me { position: absolute; top: 1rem; left: 1rem; }
+input[data-error='invalid'] { border-color: rgb(255, 225, 225); background-color: rgb(255, 225, 225); }
