Add virtual BE, primitive ajax get, favicon, routing as module.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,4 @@
+
 * { margin: 0; padding: 0; box-sizing: border-box; }
 html { width: 100%; }
 body { width: 70%; margin: auto; margin-top: 3rem; }
@@ -25,4 +26,8 @@ textarea { width: 100%; height: 10rem; }
 .left { float: left; }
 .full-width { width: 100%; }
 a.auth-me { position: absolute; top: 1rem; left: 1rem; }
+input { background-color: rgb(255, 255, 255); }
 input[data-error='invalid'] { border-color: rgb(255, 225, 225); background-color: rgb(255, 225, 225); }
+input[data-status='invalid']:not(:focus) { border-color: rgb(255, 225, 225); background-color: rgb(255, 225, 225); }
+/*input:focus { border-color: rgb(255, 245, 220); background-color: rgb(255, 245, 220); }*/
+/*input:invalid { border-color: rgb(255, 225, 225); background-color: rgb(255, 225, 225); }*/
